# ulysses-linux

./: .gitignore  run_tauri.sh
ulysses-daemon/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
ulysses-daemon/common/: constants.h  crypto.h  database.h
ulysses-daemon/daemon/: app_blocker.cpp  app_blocker.h  daemon.cpp  daemon.h  enforcement_manager.cpp  enforcement_manager.h  hardening.cpp  hardening.h  main_daemon.cpp  network_manager.cpp  network_manager.h  session_manager.cpp  session_manager.h  ulyssesd.service  web_blocker.cpp  web_blocker.h
ulysses-daemon/dbus/: net.ulysses.Daemon.xml
ulysses-daemon/gui/: blocks_tab.cpp  blocks_tab.h  dbus_client.h  home_tab.cpp  home_tab.h  lists_tab.cpp  lists_tab.h  network_tab.cpp  network_tab.h  sessions_widget.cpp  sessions_widget.h  triggers_tab.cpp  triggers_tab.h
ulysses-ui/: package-lock.json  package.json
ulysses-ui/src/: App.tsx  index.css
ulysses-ui/src-tauri/: Cargo.toml  tauri.conf.json
ulysses-ui/src-tauri/src/: lib.rs  main.rs
ulysses-ui/src/components/: BlocksPage.tsx  DashboardPage.tsx  Dialog.tsx  ListsPage.tsx  NetworkPage.tsx  TriggersPage.tsx
ulysses-ui/src/lib/: api.ts
